--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -1,3 +1,5 @@
+@import "../node_modules/bulma/bulma.sass";
+
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --vt-c-white: #ffffff;
