--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -18,10 +18,10 @@ body,
 }
 
 body {
-
   background-color: $dark;
   min-height: 100vh;
   line-height: 1.6;
+  font-weight: normal;
   font-family:
     Inter,
     -apple-system,
